-- Ferienanmelde-Schema: Ferienprogramm und Kochwerkstatt (Domäne 3,
-- fachdomaenen.md Abschnitt 6). Konzeptioneller Entwurf zu domains/ferien.md
-- und domains/grenzkarte.md — konkreter als Prosa, aber noch kein
-- Alembic-Migrationscode.
--
-- SETZT domains/stammdaten-schema.sql, domains/putzdienst-schema.sql UND
-- domains/anmeldung-schema.sql VORAUS und wird nach ihnen geladen: es
-- referenziert children/persons, erweitert die payments-Tabelle ein weiteres Mal
-- und nutzt die Zustimmung (Q1) aus dem Anmelde-Schema für die
-- Werbe-Einwilligung.
--
-- Die Domäne ist klein, hat aber die unangenehmste Eigenschaft aller Domänen:
-- sie legt Personen an, die mit der Schule sonst nichts zu tun haben. Schulfremde
-- Kinder bekommen eine children-Zeile samt Familie, anmeldendem Elternteil und
-- Notfallkontakt (domains/stammdaten.md, „Familie") — children.exit_date bleibt
-- bei ihnen dauerhaft leer und taugt deshalb NICHT als Löschfrist-Anker
-- (idea/06-dsgvo-organisatorisch.md). Der Anker ist das Programm: ist es vorbei
-- und hat das Kind keinen anderen Bezug zur Schule, fällt es mit der Frist der
-- Buchung.
--
-- Was hier bewusst NICHT steht:
--   * Kein „Clemens-Kind"-Kennzeichen. Die Frage des Formulars ist aus dem
--     Stammdaten-Prädikat „eingeschrieben" ableitbar und wäre als Spalte ein
--     zweiter, veraltender Ort (domains/grenzkarte.md, Domäne 3).
--   * Keine Notfallnummer als Feld. Sie ist eine Kontaktverknüpfung in
--     Stammdaten — und der Kontakt braucht einen Namen, sobald er eine dritte
--     Person ist (domains/grenzkarte.md).
--   * Keine Fotoeinverständnis-Sonderbehandlung. Bei schulfremden Kindern wird
--     sie nachgereicht, aber es ist dieselbe Zustimmung (Q1) und dasselbe
--     Dokument (Q2) wie überall sonst.
--   * Keine eigene Zahlung je Buchung. Bezahlt wird die Anmeldung als Ganzes
--     (Begründung an program_registrations).
--   * Keine Stornogebühr und keine Rückerstattung. Storniert wird heute per Mail
--     an den Hort; was daraus finanziell folgt, entscheidet die Buchhaltung
--     außerhalb von Weltenbaum (domains/grenzkarte.md, Q3).

-- Ein Programm ist ein konkretes Angebot in einem konkreten Zeitraum — die
-- Herbstferien 2026, nicht „das Ferienprogramm" allgemein. Kochwerkstatt und
-- Ferienprogramm teilen sich diese Tabelle, weil sie sich in nichts
-- unterscheiden, was das Schema sieht.
--
-- booking_closes_at ist Pflicht und nicht nullable: die Anmeldung wird
-- ausdrücklich VOR Programmbeginn geschlossen, weil vorab eingekauft und
-- geplant werden muss — auch dann, wenn rechnerisch noch Platz wäre
-- (prozesse.md Abschnitt 10). Ein Programm ohne Anmeldeschluss gibt es nicht.
CREATE TABLE programs (
    program_id        integer GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    label             text NOT NULL UNIQUE CHECK (label <> ''),   -- z. B. "Ferienprogramm Herbst 2026"
    starts_on         date NOT NULL,
    ends_on           date NOT NULL,
    booking_closes_at timestamptz NOT NULL,
    -- Preis je gebuchtem Tag, für die Berechnung des Zahlbetrags beim Absenden.
    -- Wie beim Putzdienst steht der Betrag am Programm und die gezahlte Summe an
    -- der Zahlung: was gezahlt wurde, muss auch dann noch stimmen, wenn der
    -- Preis später korrigiert wird.
    fee_per_day       numeric(8,2) NOT NULL CHECK (fee_per_day >= 0),
    created_at        timestamptz NOT NULL DEFAULT now(),
    created_by        text NOT NULL,
    updated_at        timestamptz NOT NULL DEFAULT now(),
    updated_by        text NOT NULL,
    CONSTRAINT programs_period_check CHECK (ends_on >= starts_on),
    CONSTRAINT programs_booking_closes_before_start_check
        CHECK (booking_closes_at::date <= starts_on)
);

-- Angebotstag mit eigener Kapazität. Die Grenze gilt je TAG und nicht je
-- Programm — genau so ist sie real formuliert (prozesse.md Abschnitt 10), und
-- eine Programmsumme ließe zu, dass alle Kinder am selben Tag erscheinen.
--
-- Anders als beim Putzdienst ist die Kapazität hier eine harte Obergrenze und
-- kein berechneter Richtwert: es geht um Aufsicht und eingekauftes Material,
-- nicht um eine gleichmäßige Verteilung.
CREATE TABLE program_days (
    program_day_id integer GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    program_id     integer NOT NULL REFERENCES programs(program_id) ON DELETE RESTRICT,
    day_on         date NOT NULL,
    capacity       smallint NOT NULL CHECK (capacity > 0),
    created_at     timestamptz NOT NULL DEFAULT now(),
    created_by     text NOT NULL,
    updated_at     timestamptz NOT NULL DEFAULT now(),
    updated_by     text NOT NULL,
    UNIQUE (program_id, day_on)
);

-- Der Anmeldevorgang: ein Absenden des Formulars, MEHRERE Kinder und mehrere
-- Tage. Eigene Entität, weil die Zahlung genau an ihm hängt — bei drei Kindern
-- füllt niemand drei Formulare aus und bezahlt dreimal (prozesse.md Abschnitt
-- 10). Ohne sie müsste jede einzelne Tagesbuchung ihre eigene Zahlung tragen,
-- und Q3 verlangt genau einen Vorgang je Zahlung.
--
-- registered_by_person_id ist der anmeldende Elternteil: an ihn gehen
-- Buchungsbestätigung, Stornierung und die nachzureichende
-- Fotoeinverständnis-Erklärung. Er ist zugleich der Grund, warum auch ein
-- schulfremdes Kind eine Familie bekommt (domains/stammdaten.md).
--
-- Die Werbe-Einwilligung des Formulars steht NICHT hier, sondern als Zustimmung
-- in Q1: sie überlebt den Vorgang, ist widerrufbar und wird später wieder
-- geprüft — genau die Eigenschaften, für die Q1 gebaut wurde.
CREATE TABLE program_registrations (
    program_registration_id uuid PRIMARY KEY DEFAULT gen_random_uuid(),
    program_id              integer NOT NULL REFERENCES programs(program_id) ON DELETE RESTRICT,
    registered_by_person_id uuid NOT NULL REFERENCES persons(person_id) ON DELETE RESTRICT,
    submitted_at            timestamptz NOT NULL DEFAULT now(),
    cancelled_at            timestamptz,   -- Storno des GESAMTEN Vorgangs, siehe program_bookings
    created_at              timestamptz NOT NULL DEFAULT now(),
    created_by              text NOT NULL,
    updated_at              timestamptz NOT NULL DEFAULT now(),
    updated_by              text NOT NULL
);
CREATE INDEX ON program_registrations (registered_by_person_id);
CREATE INDEX ON program_registrations (program_id);

-- Die eigentliche Buchung: ein Kind an einem Angebotstag, mit gewähltem
-- Betreuungsende.
--
-- care_until als Uhrzeit und nicht als Werteliste: real stehen 14:00 und 16:00
-- zur Wahl, und das sind Zeitpunkte, keine benannten Kategorien — eine Liste
-- „14 Uhr"/„16 Uhr" wäre eine Werteliste über zwei Uhrzeiten, die man auch
-- direkt hinschreiben kann. Welche Enden ein Tag anbietet, ist Bedienführung.
--
-- UNIQUE (child_id, program_day_id): dasselbe Kind ist an einem Tag einmal da.
-- Eine zweite Buchung nach Storno wäre damit blockiert — deshalb löscht ein
-- Storno die Zeile nicht, sondern setzt cancelled_at, und die Wiederanmeldung
-- räumt es wieder ab. Das hält zugleich die Tageskapazität ehrlich: eine
-- stornierte Buchung darf sie nicht mehr belegen.
CREATE TABLE program_bookings (
    program_booking_id      uuid PRIMARY KEY DEFAULT gen_random_uuid(),
    program_registration_id uuid NOT NULL REFERENCES program_registrations(program_registration_id) ON DELETE RESTRICT,
    child_id                uuid NOT NULL REFERENCES children(child_id) ON DELETE RESTRICT,
    program_day_id          integer NOT NULL REFERENCES program_days(program_day_id) ON DELETE RESTRICT,
    care_until              time NOT NULL,
    -- „Wichtige Notizen"/„Bemerkung" des heutigen Formulars. Notiz zu einem
    -- VORGANG und deshalb hier erlaubt, anders als das verbotene allgemeine
    -- Notizfeld an einer Personenzeile (domains/stammdaten.md, „Felder").
    note                    text CHECK (note <> ''),
    cancelled_at            timestamptz,
    created_at              timestamptz NOT NULL DEFAULT now(),
    created_by              text NOT NULL,
    updated_at              timestamptz NOT NULL DEFAULT now(),
    updated_by              text NOT NULL,
    UNIQUE (child_id, program_day_id)
);
CREATE INDEX ON program_bookings (program_registration_id);
CREATE INDEX ON program_bookings (program_day_id);

-- ---------------------------------------------------------------------------
-- Q3 — Zahlungsvorgang ein letztes Mal erweitern
-- ---------------------------------------------------------------------------
-- Die Ferienprogramm-Buchung ist der vierte und damit letzte der in
-- domains/grenzkarte.md (Q3) benannten Stripe-Anlässe. Danach ist die Liste
-- vollständig: Putzdienst-Komplettfreikauf, Putzdienst-Einzelfreikauf,
-- Anmeldegebühr, Ferienbuchung.
ALTER TABLE payments
    ADD COLUMN program_registration_id uuid UNIQUE
        REFERENCES program_registrations(program_registration_id) ON DELETE RESTRICT;

ALTER TABLE payments DROP CONSTRAINT payments_exactly_one_subject_check;
ALTER TABLE payments ADD CONSTRAINT payments_exactly_one_subject_check
    CHECK ((cleaning_buyout_id IS NOT NULL)::int
         + (cleaning_slot_buyout_id IS NOT NULL)::int
         + (application_id IS NOT NULL)::int
         + (program_registration_id IS NOT NULL)::int = 1);

-- ---------------------------------------------------------------------------
-- Audit-Trigger
-- ---------------------------------------------------------------------------
CREATE TRIGGER set_row_audit BEFORE INSERT OR UPDATE ON programs
    FOR EACH ROW EXECUTE FUNCTION set_row_audit();
CREATE TRIGGER set_row_audit BEFORE INSERT OR UPDATE ON program_days
    FOR EACH ROW EXECUTE FUNCTION set_row_audit();
CREATE TRIGGER set_row_audit BEFORE INSERT OR UPDATE ON program_registrations
    FOR EACH ROW EXECUTE FUNCTION set_row_audit();
CREATE TRIGGER set_row_audit BEFORE INSERT OR UPDATE ON program_bookings
    FOR EACH ROW EXECUTE FUNCTION set_row_audit();
