CREATE EXTENSION IF NOT EXISTS citext;

CREATE TABLE genders (
    gender_id integer GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    label     text NOT NULL UNIQUE,
    code      text NOT NULL UNIQUE CHECK (code ~ '^[A-Za-z0-9]{1,8}$')
);

CREATE TABLE salutations (
    salutation_id integer GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    label         text NOT NULL UNIQUE
);

CREATE TABLE guardian_categories (
    guardian_category_id      integer GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    label                     text NOT NULL UNIQUE,
    exempt_from_parent_duties boolean NOT NULL DEFAULT false,
    created_at                timestamptz NOT NULL DEFAULT now(),
    created_by                text NOT NULL,
    updated_at                timestamptz NOT NULL DEFAULT now(),
    updated_by                text NOT NULL
);

CREATE TABLE denominations (
    denomination_id integer GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    label           text NOT NULL UNIQUE
);

CREATE TABLE languages (
    language_id integer GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    label       text NOT NULL UNIQUE,
    code        text NOT NULL UNIQUE CHECK (code ~ '^[a-z]{2,3}(-[A-Za-z0-9]{2,8})*$')
);

CREATE TABLE countries (
    country_id integer GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    label      text NOT NULL UNIQUE,
    code       text NOT NULL UNIQUE CHECK (code ~ '^[A-Z]{3}$')
);

CREATE TABLE phone_types (
    phone_type_id integer GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    label         text NOT NULL UNIQUE
);

CREATE TABLE school_branches (
    school_branch_id integer GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    label            text NOT NULL UNIQUE
);

CREATE TABLE grade_levels (
    grade_level_id   integer GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    school_branch_id integer NOT NULL REFERENCES school_branches(school_branch_id) ON DELETE RESTRICT,
    label            text NOT NULL,
    sort_order       smallint NOT NULL,
    is_final_grade   boolean NOT NULL DEFAULT false,
    created_at       timestamptz NOT NULL DEFAULT now(),
    created_by       text NOT NULL,
    updated_at       timestamptz NOT NULL DEFAULT now(),
    updated_by       text NOT NULL,
    UNIQUE (school_branch_id, label),
    UNIQUE (school_branch_id, sort_order),
    UNIQUE (grade_level_id, school_branch_id)
);

CREATE UNIQUE INDEX grade_levels_one_final_per_branch ON grade_levels (school_branch_id) WHERE is_final_grade;

CREATE TABLE classes (
    class_id         integer GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    school_branch_id integer NOT NULL REFERENCES school_branches(school_branch_id) ON DELETE RESTRICT,
    grade_level_id   integer NOT NULL,
    entry_year       smallint NOT NULL,
    stream           text NOT NULL CHECK (stream <> ''),
    is_active        boolean NOT NULL DEFAULT true,
    class_teacher_id uuid,
    room             text,
    created_at       timestamptz NOT NULL DEFAULT now(),
    created_by       text NOT NULL,
    updated_at       timestamptz NOT NULL DEFAULT now(),
    updated_by       text NOT NULL,
    UNIQUE (school_branch_id, entry_year, stream),
    FOREIGN KEY (grade_level_id, school_branch_id) REFERENCES grade_levels(grade_level_id, school_branch_id),
    CHECK (entry_year BETWEEN 2000 AND 2100)
);

CREATE TABLE previous_schools (
    previous_school_id integer GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    label              text NOT NULL UNIQUE
);

CREATE TABLE addresses (
    address_id   uuid PRIMARY KEY DEFAULT gen_random_uuid(),
    street       text NOT NULL CHECK (street <> ''),
    house_number text CHECK (house_number <> ''),
    district     text CHECK (district <> ''),
    postal_code  text NOT NULL CHECK (postal_code <> ''),
    city         text NOT NULL CHECK (city <> ''),
    country_id   integer NOT NULL REFERENCES countries(country_id) ON DELETE RESTRICT,
    created_at   timestamptz NOT NULL DEFAULT now(),
    created_by   text NOT NULL,
    updated_at   timestamptz NOT NULL DEFAULT now(),
    updated_by   text NOT NULL
);

CREATE INDEX ON addresses (postal_code, street, house_number);

CREATE TABLE persons (
    person_id         uuid PRIMARY KEY DEFAULT gen_random_uuid(),
    salutation_id     integer REFERENCES salutations(salutation_id) ON DELETE RESTRICT,
    first_name        text CHECK (first_name <> ''),
    last_name         text NOT NULL CHECK (last_name <> ''),
    gender_id         integer REFERENCES genders(gender_id) ON DELETE RESTRICT,
    address_id        uuid REFERENCES addresses(address_id) ON DELETE RESTRICT,
    email             citext,
    created_at        timestamptz NOT NULL DEFAULT now(),
    created_by        text NOT NULL,
    updated_at        timestamptz NOT NULL DEFAULT now(),
    updated_by        text NOT NULL,
    CHECK (email ~ '^[^[:space:]@]+@[^[:space:]@]+\.[^[:space:]@]+$')
);

CREATE INDEX ON persons (address_id);

CREATE INDEX ON persons (email);

CREATE INDEX ON persons (lower(last_name) text_pattern_ops);

CREATE TABLE phone_numbers (
    phone_number_id uuid PRIMARY KEY DEFAULT gen_random_uuid(),
    person_id       uuid NOT NULL REFERENCES persons(person_id) ON DELETE CASCADE,
    phone_type_id   integer NOT NULL REFERENCES phone_types(phone_type_id) ON DELETE RESTRICT,
    number          text NOT NULL CHECK (number <> ''),
    is_primary      boolean NOT NULL DEFAULT false,
    note            text,
    created_at      timestamptz NOT NULL DEFAULT now(),
    created_by      text NOT NULL,
    updated_at      timestamptz NOT NULL DEFAULT now(),
    updated_by      text NOT NULL,
    UNIQUE (person_id, number)
);

CREATE UNIQUE INDEX phone_numbers_one_primary_per_person ON phone_numbers (person_id) WHERE is_primary;

CREATE TABLE families (
    family_id  uuid PRIMARY KEY DEFAULT gen_random_uuid(),
    label      text CHECK (label <> ''),
    alias      text UNIQUE CHECK (alias <> ''),
    created_at timestamptz NOT NULL DEFAULT now(),
    created_by text NOT NULL,
    updated_at timestamptz NOT NULL DEFAULT now(),
    updated_by text NOT NULL
);

CREATE TABLE children (
    child_id                   uuid PRIMARY KEY REFERENCES persons(person_id) ON DELETE CASCADE,
    family_id                  uuid REFERENCES families(family_id) ON DELETE RESTRICT,
    payer_id                   uuid,
    mandate_reference          text UNIQUE CHECK (mandate_reference <> ''),
    mandate_signed_at          date,
    nickname                   text,
    school_email               citext UNIQUE,
    date_of_birth              date NOT NULL,
    birthplace                 text,
    birth_country_id           integer REFERENCES countries(country_id) ON DELETE RESTRICT,
    nationality_id             integer REFERENCES countries(country_id) ON DELETE RESTRICT,
    second_nationality_id      integer REFERENCES countries(country_id) ON DELETE RESTRICT,
    home_language_id           integer REFERENCES languages(language_id) ON DELETE RESTRICT,
    denomination_id            integer REFERENCES denominations(denomination_id) ON DELETE RESTRICT,
    congregation               text,
    provisional_grade_level_id integer REFERENCES grade_levels(grade_level_id) ON DELETE RESTRICT,
    class_id                   integer REFERENCES classes(class_id) ON DELETE RESTRICT,
    registration_date          date,
    entry_date                 date,
    exit_date                  date,
    previous_school_id         integer REFERENCES previous_schools(previous_school_id) ON DELETE RESTRICT,
    previous_school_consent_at timestamptz,
    created_at                 timestamptz NOT NULL DEFAULT now(),
    created_by                 text NOT NULL,
    updated_at                 timestamptz NOT NULL DEFAULT now(),
    updated_by                 text NOT NULL,
    CHECK (school_email ~ '^[^[:space:]@]+@[^[:space:]@]+\.[^[:space:]@]+$'),
    CONSTRAINT children_second_nationality_requires_first_check
        CHECK (second_nationality_id IS NULL OR nationality_id IS NOT NULL),
    CONSTRAINT children_second_nationality_differs_check
        CHECK (second_nationality_id IS NULL OR second_nationality_id <> nationality_id),
    CONSTRAINT children_exit_after_entry_check
        CHECK (exit_date IS NULL OR entry_date IS NULL OR exit_date >= entry_date),
    CONSTRAINT children_entry_after_registration_check
        CHECK (entry_date IS NULL OR registration_date IS NULL OR entry_date >= registration_date),
    CONSTRAINT children_born_before_registration_check
        CHECK (registration_date IS NULL OR date_of_birth < registration_date),
    CONSTRAINT children_born_before_entry_check
        CHECK (entry_date IS NULL OR date_of_birth < entry_date),
    CONSTRAINT children_previous_school_consent_check
        CHECK (previous_school_consent_at IS NULL OR previous_school_id IS NOT NULL),
    CONSTRAINT children_class_excludes_provisional_grade_check
        CHECK (class_id IS NULL OR provisional_grade_level_id IS NULL),
    CONSTRAINT children_mandate_complete_check
        CHECK ((mandate_reference IS NULL) = (mandate_signed_at IS NULL)),
    CONSTRAINT children_mandate_requires_payer_check
        CHECK (mandate_reference IS NULL OR payer_id IS NOT NULL)
);

CREATE INDEX ON children (family_id);

CREATE INDEX ON children (class_id);

CREATE INDEX ON children (provisional_grade_level_id);

CREATE INDEX ON children (payer_id);

CREATE TABLE guardians (
    guardian_id     uuid PRIMARY KEY REFERENCES persons(person_id) ON DELETE RESTRICT,
    occupation      text,
    created_at      timestamptz NOT NULL DEFAULT now(),
    created_by      text NOT NULL,
    updated_at      timestamptz NOT NULL DEFAULT now(),
    updated_by      text NOT NULL
);

CREATE TABLE employees (
    employee_id      uuid PRIMARY KEY REFERENCES persons(person_id) ON DELETE CASCADE,
    work_email       citext UNIQUE,
    entra_object_id  text UNIQUE CHECK (entra_object_id <> ''),
    employment_start date,
    employment_end   date,
    created_at       timestamptz NOT NULL DEFAULT now(),
    created_by       text NOT NULL,
    updated_at       timestamptz NOT NULL DEFAULT now(),
    updated_by       text NOT NULL,
    CHECK (work_email ~ '^[^[:space:]@]+@[^[:space:]@]+\.[^[:space:]@]+$'),
    CONSTRAINT employees_employment_period_check
        CHECK (employment_end IS NULL OR employment_start IS NULL OR employment_end >= employment_start)
);
ALTER TABLE classes ADD FOREIGN KEY (class_teacher_id) REFERENCES employees(employee_id) ON DELETE RESTRICT;

CREATE INDEX ON classes (class_teacher_id);

CREATE TABLE family_guardians (
    family_id                 uuid NOT NULL REFERENCES families(family_id) ON DELETE CASCADE,
    guardian_id               uuid NOT NULL REFERENCES guardians(guardian_id) ON DELETE CASCADE,
    guardian_category_id      integer REFERENCES guardian_categories(guardian_category_id) ON DELETE RESTRICT,
    include_in_correspondence boolean NOT NULL DEFAULT true,
    acting_for                text,
    created_at                timestamptz NOT NULL DEFAULT now(),
    created_by                text NOT NULL,
    updated_at                timestamptz NOT NULL DEFAULT now(),
    updated_by                text NOT NULL,
    PRIMARY KEY (family_id, guardian_id)
);

CREATE INDEX ON family_guardians (guardian_id);

CREATE TABLE child_contacts (
    child_id     uuid NOT NULL REFERENCES children(child_id) ON DELETE CASCADE,
    contact_id   uuid NOT NULL REFERENCES persons(person_id) ON DELETE CASCADE,
    relationship text,
    priority     smallint,
    pickup_authorized boolean NOT NULL DEFAULT false,
    created_at   timestamptz NOT NULL DEFAULT now(),
    created_by   text NOT NULL,
    updated_at   timestamptz NOT NULL DEFAULT now(),
    updated_by   text NOT NULL,
    PRIMARY KEY (child_id, contact_id),
    CONSTRAINT child_contacts_not_self_check CHECK (child_id <> contact_id)
);

CREATE INDEX ON child_contacts (contact_id);

CREATE UNIQUE INDEX child_contacts_one_contact_per_priority ON child_contacts (child_id, priority) WHERE priority IS NOT NULL;

CREATE TABLE payers (
    payer_id           uuid PRIMARY KEY REFERENCES persons(person_id) ON DELETE RESTRICT,
    billing_address_id uuid REFERENCES addresses(address_id) ON DELETE RESTRICT,
    iban               text CHECK (iban ~ '^[A-Z]{2}[0-9]{2}[A-Z0-9]{11,30}$'),
    bic                text CHECK (bic ~ '^[A-Z]{6}[A-Z0-9]{2}([A-Z0-9]{3})?$'),
    account_holder     text,
    created_at         timestamptz NOT NULL DEFAULT now(),
    created_by         text NOT NULL,
    updated_at         timestamptz NOT NULL DEFAULT now(),
    updated_by         text NOT NULL
);

CREATE INDEX ON payers (billing_address_id);
ALTER TABLE children ADD FOREIGN KEY (payer_id) REFERENCES payers(payer_id) ON DELETE RESTRICT;

CREATE FUNCTION set_row_audit() RETURNS trigger AS $$
DECLARE
    actor text := nullif(current_setting('app.actor', true), '');
BEGIN
    IF actor IS NULL THEN
        RAISE EXCEPTION 'app.actor nicht gesetzt — SET LOCAL app.actor vor jedem Schreibzugriff auf eine Audit-Tabelle';
    END IF;
    IF actor !~ '^(entra|guardian|system):.' THEN
        RAISE EXCEPTION 'app.actor braucht ein bekanntes Präfix (entra:/guardian:/system:), war: %', actor;
    END IF;
    IF TG_OP = 'INSERT' THEN
        NEW.created_at := now();
        NEW.created_by := actor;
    ELSE
        NEW.created_at := OLD.created_at;
        NEW.created_by := OLD.created_by;
    END IF;
    NEW.updated_at := now();
    NEW.updated_by := actor;
    RETURN NEW;
END;
$$ LANGUAGE plpgsql;

CREATE TRIGGER set_row_audit BEFORE INSERT OR UPDATE ON guardian_categories
    FOR EACH ROW EXECUTE FUNCTION set_row_audit();

CREATE TRIGGER set_row_audit BEFORE INSERT OR UPDATE ON grade_levels
    FOR EACH ROW EXECUTE FUNCTION set_row_audit();

CREATE TRIGGER set_row_audit BEFORE INSERT OR UPDATE ON classes
    FOR EACH ROW EXECUTE FUNCTION set_row_audit();

CREATE TRIGGER set_row_audit BEFORE INSERT OR UPDATE ON addresses
    FOR EACH ROW EXECUTE FUNCTION set_row_audit();

CREATE TRIGGER set_row_audit BEFORE INSERT OR UPDATE ON persons
    FOR EACH ROW EXECUTE FUNCTION set_row_audit();

CREATE TRIGGER set_row_audit BEFORE INSERT OR UPDATE ON phone_numbers
    FOR EACH ROW EXECUTE FUNCTION set_row_audit();

CREATE TRIGGER set_row_audit BEFORE INSERT OR UPDATE ON families
    FOR EACH ROW EXECUTE FUNCTION set_row_audit();

CREATE TRIGGER set_row_audit BEFORE INSERT OR UPDATE ON children
    FOR EACH ROW EXECUTE FUNCTION set_row_audit();

CREATE TRIGGER set_row_audit BEFORE INSERT OR UPDATE ON guardians
    FOR EACH ROW EXECUTE FUNCTION set_row_audit();

CREATE TRIGGER set_row_audit BEFORE INSERT OR UPDATE ON employees
    FOR EACH ROW EXECUTE FUNCTION set_row_audit();

CREATE TRIGGER set_row_audit BEFORE INSERT OR UPDATE ON family_guardians
    FOR EACH ROW EXECUTE FUNCTION set_row_audit();

CREATE TRIGGER set_row_audit BEFORE INSERT OR UPDATE ON child_contacts
    FOR EACH ROW EXECUTE FUNCTION set_row_audit();

CREATE TRIGGER set_row_audit BEFORE INSERT OR UPDATE ON payers
    FOR EACH ROW EXECUTE FUNCTION set_row_audit();
