// Ferienanmeldung — nur Beziehungen
//
// Erzeugt von domains/dbml/generate.sh aus domains/ferien-schema.sql.
// ABGELEITET — nicht von Hand pflegen. Quelle ist die geladene Datenbank,
// nicht diese Datei; Spalten, Typen und Constraints stehen in der .sql.
//
// Je Tabelle stehen ausschließlich Primär- und Fremdschlüssel, damit die
// Kanten lesbar bleiben. Tabellen anderer Domänen sind Stubs und tragen
// ihre Herkunft als Notiz.

Table program_bookings {
  program_booking_id uuid [pk]
  child_id uuid
  program_day_id integer
  program_registration_id uuid
}

Table program_days {
  program_day_id integer [pk]
  program_id integer
}

Table program_registrations {
  program_registration_id uuid [pk]
  program_id integer
  registered_by_person_id uuid
}

Table programs {
  program_id integer [pk]
}

Table children [note: 'aus Stammdaten'] {
  child_id uuid
}

Table payments [note: 'aus Putzdienst'] {
  program_registration_id uuid
}

Table persons [note: 'aus Stammdaten'] {
  person_id uuid
}

Ref: payments.program_registration_id > program_registrations.program_registration_id
Ref: program_bookings.child_id > children.child_id
Ref: program_bookings.program_day_id > program_days.program_day_id
Ref: program_bookings.program_registration_id > program_registrations.program_registration_id
Ref: program_days.program_id > programs.program_id
Ref: program_registrations.program_id > programs.program_id
Ref: program_registrations.registered_by_person_id > persons.person_id

TableGroup "Fremde Domänen" {
  children
  payments
  persons
}
